rook-ceph-cluster/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: http
  hostnames:
  - "rook-ceph.pfs.pack"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: rook-ceph-dashboard-tls
  namespace: rook-ceph
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: https-passthrough
  hostnames:
  - "rook-ceph.pfs.pack"
  rules:
  - backendRefs:
    - name: rook-ceph-mgr-dashboard
      port: 8443

# - matches:
  #   - path:
  #       type: PathPrefix
  #       value: "/"
